# gentree

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  4139444aeb74_init_all_tables.py  b2e1f3a7c901_add_relationship_other_type_and_layout_as.py  c3f5a9d2e081_add_person_photo_url.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: config.py  security.py  storage.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  archive_request.py  audit.py  book.py  document.py  enums.py  fact.py  notification.py  profile.py  user.py
backend/app/modules/archive_requests/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/modules/books/: __init__.py  narrative.py  renderer.py  router.py  schemas.py  service.py
backend/app/modules/documents/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/facts/: __init__.py  router.py  schemas.py  service.py
backend/app/repositories/: __init__.py  archive_request.py  base.py  document.py  fact.py  notification.py  person.py  profile.py  relationship.py  user.py
backend/app/schemas/: __init__.py  health.py  user.py
backend/app/services/: __init__.py  base.py
backend/tests/: conftest.py  test_book_generation.py  test_healthcheck.py  test_person_updates.py  test_relationship_cycles.py
docs/: README.md  er-model-3nf.md  (+2 more)
(+37 files in other folders)
